--- a/frontend/src/Cadastro.css
+++ b/frontend/src/Cadastro.css
@@ -5,9 +5,14 @@ body, html {
   font-family: "Segoe UI", sans-serif;
 }
 
+div {
+  width: 90%;
+}
+
 .form-container {
   width: 100%;
-  max-width: 800px;
+  /* max-width: 800px; */
+  max-width: 90%;
   margin: 40px auto;
   padding: 24px;
   background-color: #ffffff;
